read word by bare (raw word)
