# internal/adapter/delivery/http/v1/word.go
@@ -11,6 +11,7 @@ import (
 	_ "github.com/joqd/go-russian/internal/adapter/delivery/http/response/wrapper"
 	"github.com/joqd/go-russian/internal/core/domain"
 	"github.com/joqd/go-russian/internal/core/port"
+	"go.mongodb.org/mongo-driver/v2/bson"
 
 	"github.com/gin-gonic/gin"
 )
@@ -29,6 +30,16 @@ func NewWordHandler(usecase port.WordUsecase, xlog port.Logger) *wordHandler {
 	}
 }
 
+func (w *wordHandler) Get(c *gin.Context) {
+	query := c.Param("query")
+
+	if _, err := bson.ObjectIDFromHex(query); err == nil {
+		w.GetByID(c)
+	} else {
+		w.GetByBare(c)
+	}
+}
+
 // @Summary      Get a word by ID
 // @Description  Retrieve a word from the database using its ID
 // @Tags         words
@@ -39,7 +50,7 @@ func NewWordHandler(usecase port.WordUsecase, xlog port.Logger) *wordHandler {
 // @Failure      500  {object}  wrapper.ErrorInternalServerWrapper
 // @Router       /api/v1/words/{id} [get]
 func (w *wordHandler) GetByID(c *gin.Context) {
-	id := c.Param("id")
+	id := c.Param("query")
 
 	word, err := w.usecase.GetByID(c.Request.Context(), id)
 	if err != nil {
@@ -88,6 +99,32 @@ func (w *wordHandler) Create(c *gin.Context) {
 
 	word, err := w.usecase.Create(c.Request.Context(), payload)
 	if err != nil {
+		response.ErrorResponse(c, http.StatusInternalServerError, response.DescInternalServerError)
+		return
+	}
+
+	retrievedWord := mapper.WordToRetrievedWord(word)
+	response.SuccessResponse(c, http.StatusOK, retrievedWord)
+}
+
+// @Summary      Get a word by Bare
+// @Description  Retrieve a word from the database using its Bare (raw word)
+// @Tags         words
+// @Param        bare path      string  true  "Raw Word"
+// @Success      200  {object}  wrapper.RetrievedWordWrapper
+// @Failure      404  {object}  wrapper.ErrorNotFoundWrapper
+// @Failure      500  {object}  wrapper.ErrorInternalServerWrapper
+// @Router       /api/v1/words/{bare} [get]
+func (w *wordHandler) GetByBare(c *gin.Context) {
+	bare := c.Param("query")
+
+	word, err := w.usecase.GetByBare(c.Request.Context(), bare)
+	if err != nil {
+		if errors.Is(err, domain.ErrDataNotFound) {
+			response.ErrorResponse(c, http.StatusNotFound, response.DescDataNotFound)
+			return
+		}
+
 		response.ErrorResponse(c, http.StatusInternalServerError, response.DescInternalServerError)
 		return
 	}
